# simple-db

./: Cargo.toml  README.md
src/: command.rs  main.rs  storage.rs  table.rs
src/cli/: cli_parser.rs
src/command/: meta_cmd_handler.rs  sql_cmd_handler.rs
src/storage/: constant.rs  cursor.rs  node.rs  page.rs  pager.rs  row.rs  table.rs
