[package]
name = "simple_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
log = "0.4.20"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = { version = "1.0.111", features = [] }
bincode = "2.0.0-rc.3"